@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.381 2002/09/17 05:51:41 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.382 2002/09/17 06:27:23 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-09-17 11:07 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/codebloc.c
+  * source/vm/hvm.c
+    * Added hb_gcLock() on current globals before executing nested call, and hb_gcUnlock() after such execution.
 
 2002-09-16 23:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/compiler/harbour.slx
